test: CategoryService 리팩토링 및 자식 카테고리 fetch join 조회 테스트 수정 (#8)